# dev-journal

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  make.sh  run.sh
backtrace/: Makefile  main.cpp  test_child.cpp
basic/01_low_level_principles/: main.c  sum.c
basic/01_low_level_principles/assembly/: main  main.c  main.elf  main.s  sum.c
basic/01_low_level_principles/compilation/: main.c
basic/01_low_level_principles/linking/: a.c  a.out  ab  b.c
basic/01_low_level_principles/loading/: main  main.c
basic/01_low_level_principles/preprocessing/: avs.c  avs.h  avs.i  avs1.h  avs2.h  avs_once.h
breaks-section/: Makefile  b.txt  d.txt  main.cpp
call-section/: Makefile  main.cpp
catch-section/: Makefile  main.cpp
cmake/: build.properties  internal_utils.cmake  utils.cmake
coredump1-section/: Makefile  main.cpp
coredump2-section/: Makefile  main.cpp
coredump3-section/: Makefile  main.cpp
crack-section/: Makefile  main.cpp
deadlock-section/: Makefile  main.cpp
fork-section/: Makefile  main.cpp
jump-section/: Makefile  main.cpp
memcheck-section/: Makefile  main.cpp
memleak-section/: Makefile  main.cpp
multhread/: Makefile  main.cpp
multhread2/: Makefile  main.cpp
multhread3/: Makefile
multhread4/: Makefile
multhread5/: Makefile
patch-section/: Makefile  main.cpp
ptype-section/: Makefile  main.cpp
release-section/: Makefile  main.cpp
remote-section/: Makefile  main.cpp
runback-section/: Makefile  main.cpp
script_tool/: init.sh  utils.sh
section1/: Makefile  section1.cpp
section2/: Makefile  section2.cpp
section3/: Makefile  main.cpp  teacher.cpp
section4/: Makefile  main.cpp  person.h  student.cpp  student.h  teacher.h
section5/: Makefile  main.cpp
section6/: Makefile  main.cpp
shell-section/: Makefile  main.cpp
skip-section/: Makefile  main.cpp  main.d  test.cpp  test.d  test.h
skip-section/common/: test.h
src/main/: CMakeLists.txt  main.cpp
src/middleware/: CMakeLists.txt
src/middleware/common/: CMakeLists.txt  common.h
src/middleware/udp/: CMakeLists.txt  udp_driver.cpp  udp_driver.h
src/runtime/: CMakeLists.txt  run_contex.cpp  run_contex.h
src/source/: CMakeLists.txt  source_base.h  source_manager.cpp
src/source/drive/: CMakeLists.txt  drive.cpp  drive.h  udp_client.h  udp_server.h
src/source/test/: CMakeLists.txt  c_oop.c  c_oop.h  const.h  explicit.h  externc.c  externc.h  inline.cpp  inline.h  inline.s  static.h  struct_or_class.h  test_case.cpp  test_case.h  this.h  typedef_struct.h  union.h  volatile.h
view_source/: Makefile  main.cpp  test.cpp  test.h  test_child.cpp
watch-section/: Makefile  main.cpp
